Fixes missing requirement for docs and fixes spacing in toctree.

--- a/doc/src/_static/css/custom.css
+++ b/doc/src/_static/css/custom.css
@@ -1,3 +1,13 @@
 .wy-side-nav-search, .wy-nav-top {
     background: #94b24d;
 }
+
+.rst-content .section ol li > *, .rst-content .section ul li > * {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.rst-content .section ol li > ol, .rst-content .section ol li > ul, .rst-content .section ul li > ol, .rst-content .section ul li > ul {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
